      - New config file option to disable coefficient factoring and phase 2 processing.  This can be used to speed up finding interesting two-term tests for
        later phase 2 targeted searches

      Bug fixes:
      - Widened allowed range of variables in phase2 from 20% to 50% to prevent phase 2 from getting stuck in certain cases

4.3.3 New features:
      - Improved formatting of phase 1 status updates and removed/suppressed some unnecessary ones for (1-smr) mode
      - Tightened two-term test "reasonable" range for faster exclusion of uninteresting formulas in (1-smr) mode

      Bug fixes:
      - Widened allowed range of variables in phase 2 from 10% to 20% to prevent phase 2 from getting stuck when using large (inverse) expnents
        or low phase1_match_filter

4.3.2 New feature:
      - New unsolvable test in (1-smr) mode that checks if any progress has been made on best ordering since last unsolvable_checkpoint. This
        allows config file option 'phase1_mc_samples_limit' to revert to a safety check with a much higher value

4.3.1 New feature:
      - srcipts/grep-logs.sh now detects and ignores duplicate results

      Bug fixes:
      - Fixed critical bug where phase2 would fail to solve because nle_state->phase1_matches_count was not being reset between runs
        and phase2 was trying to solve stale formula terms from a previous run (often with the wrong exponent)
      - Removed duplicate upload of interesting two-term test finds
      - Updated titles in scripts/grep-logs.sh to reflect current program name

4.3  New features:
     - Support for reference mass ratios (rmr) outside radical
     - More options for controlling verbosity of status output
     - New configuration option nle_mixing_polarity for 2-term with (1-smr) mode.   Status updates now indicate polarity
     - Setting phase1_random_samples_enable to 'no' now also causes phase1 to be run just once instead of continuously