@@ -6,6 +6,7 @@
 
       Bug fixes:
       - Widened allowed range of variables in phase2 from 20% to 50% to prevent phase 2 from getting stuck in certain cases
+      - Added missing (mw >= mz) check to mz in phase2
 
 4.3.3 New features:
       - Improved formatting of phase 1 status updates and removed/suppressed some unnecessary ones for (1-smr) mode
